[package]
name = "live_preview"
version = "0.1.0"
edition = "2021"

[dependencies]
async-io = "2.3.4"
futures = "0.3.31"
image = "0.25.0"
log = "0.4.22"
log4rs = "1.3.0"
ros2-client = "0.7.5"
rustdds = "0.11.0"
serde = "1.0.210"
show-image = { version = "0.14.0", features = ["image"] }
smol = "2.0.2"
